--- a/devetmoi.html
+++ b/devetmoi.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 <header>
-    
+    <div id="carréviolet"> 
+		<img src="logo.png" alt="logosite"</img>
+    </div>
+	<nav>
+		<ul>
+			<li <a href="">Accueil</a></li>
+			<li><a href="">Contact</a></li>
+		</ul>
+	</nav>
 </header>
 
 <footer>
