--- a/devetmoi.html
+++ b/devetmoi.html
@@ -8,7 +8,7 @@
 <body>
 <header>
     <div id="carréviolet"> 
-		<img src="logo.png" alt="logosite"</img>
+		<img src="logo.png" alt="logosite">
     </div>
 	<nav>
 		<ul>
@@ -17,7 +17,42 @@
 		</ul>
 	</nav>
 </header>
-
+	<div id="photo">
+		<img src="backgroung_image.jpg" alt="backgroundbureau">
+		<img src="logo_long.png" alt="logo long site">
+		<h1>Agence de graphisme</h1>
+	<div>
+	<section id="corps blanc">
+		<div>
+			<p>Mon petit graphisme est une agence de graphisme qui aide les entreprises à créer des visuels attractifs.</p>
+		</div>
+		<article>
+			<div class="graphisme">
+				<img src="graphic-design.png" alt="logo graphisme">
+				<H2>Graphisme</H2>
+				<p> Que vous ayez besoin de grapgisme pour un site web, 
+					des cartes de visites ou des affiches, nous réalisons des visuels dont vous serez fiers.</p>
+			</div>
+			<div class="stratégie">
+				<img src="strategie.png" alt="logo stratégie">
+				<H2>Stratégie</H2>
+				<p> Plutôt que de suggérer des graphismes à la mode,
+					nous prenons le temps de comprendre vos objectifs et nous nous adaptons à vos besoins.</p>
+			</div>
+			<div class="illustrations">
+				<img src="illustrations.png" alt="logo illustrations">
+				<H2>Illustrations</H2>
+				<p> Nos graphistes vous proposerons des illustrations 100% originales.</p>
+			</div>
+		</article>
+		<div>
+			<p> "Mon petit graphisme est une excellente agence de graphisme.
+				Les graphistes sont à l'écoute des besoins 
+				et m'ont permis de renouveler complètement la carte de mon restaurant.""
+			</p>
+			<p> Amandine restauratrice</p>
+		</div>	
+	</section>
 <footer>
 
 </footer>
