Commit footer html

--- a/devetmoi.html
+++ b/devetmoi.html
@@ -54,7 +54,29 @@
 		</div>	
 	</section>
 <footer>
-
+	<p> Mon petit graphisme - Agence de graphisme basée à Paris</p>
+	<div class="réseaux"> 
+		<i class="fab fa-twitter"></i>
+		<i class="fab fa-facebook-f"></i>
+		<i class="fab fa-instagram"></i>
+	</div>
+	<div class="basdepage"> 
+		<ol>Accès rapides
+			<li>Accueil</li>
+			<li>Contact</li>
+		</ol>
+		<ol>A propos
+			<li>Données personnelles</li>
+			<li>Mentions légales</li>
+			<li>Cookies</li>
+		</ol>
+		<ol>Coordonnées
+			<li></li>
+			<li>10 Quai de la Charente</li>
+			<li>75019 Paris</li>
+			<li>01 23 45 67 89</li>
+		</ol>
+	</div>
 </footer>
 </body>  
 </html>
