--- a/devetmoi.html
+++ b/devetmoi.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<html lang="fr">
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="devetmoi.css">
 	<title>Mon petit graphisme</title>
@@ -8,12 +9,12 @@
 <body>
 <header>
     <div id="carréviolet"> 
-		<img src="logo.png" alt="logosite">
+		<img src="logo_long.png" alt="logosite">
     </div>
 	<nav>
-		<ul>
-			<li <a href="">Accueil</a></li>
-			<li><a href="">Contact</a></li>
+		<ul id="menu">
+			<li>Accueil</li>
+			<li>Contact</li>
 		</ul>
 	</nav>
 </header>
@@ -55,7 +56,7 @@
 	</section>
 <footer>
 	<p> Mon petit graphisme - Agence de graphisme basée à Paris</p>
-	<div class="réseaux"> 
+	<div class="réseaux">  <!-- marchent pas leurs liens font-->
 		<i class="fab fa-twitter"></i>
 		<i class="fab fa-facebook-f"></i>
 		<i class="fab fa-instagram"></i>
