--- a/devetmoi.html
+++ b/devetmoi.html
@@ -19,11 +19,13 @@
 	</nav>
 </header>
 	<div id="photo">
-		<img src="backgroung_image.jpg" alt="backgroundbureau">
+		<div id="banniere">
+			<img src="backgroung_image.jpg" alt="backgroundbureau">
+		</div>
 		<img src="logo_long.png" alt="logo long site">
 		<h1>Agence de graphisme</h1>
 	<div>
-	<section id="corps blanc">
+	<section id="corps-blanc">
 		<div>
 			<p>Mon petit graphisme est une agence de graphisme qui aide les entreprises à créer des visuels attractifs.</p>
 		</div>
