--- a/devetmoi.html
+++ b/devetmoi.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <div id="carréviolet"> 
+    <div id="carreviolet"> 
 		<img src="logo_long.png" alt="logosite">
     </div>
 	<nav>
@@ -19,21 +19,22 @@
 	</nav>
 </header>
 	<div id="photo">
+		<img id="banniereimg" src="backgroung_image.jpg" alt="backgroundbureau">
 		<div id="banniere">
-			<img src="backgroung_image.jpg" alt="backgroundbureau">
+			<img id="petitgraphismelogo" src="logo_long.png" alt="logo long site">
+			<h1>Agence de graphisme</h1>
 		</div>
-		<img src="logo_long.png" alt="logo long site">
-		<h1>Agence de graphisme</h1>
+		
 	<div>
 	<section id="corps-blanc">
-		<div>
+		<div class="sousbanniere">
 			<p>Mon petit graphisme est une agence de graphisme qui aide les entreprises à créer des visuels attractifs.</p>
 		</div>
-		<article>
+		<article class="blocs">
 			<div class="graphisme">
 				<img src="graphic-design.png" alt="logo graphisme">
 				<H2>Graphisme</H2>
-				<p> Que vous ayez besoin de grapgisme pour un site web, 
+				<p> Que vous ayez besoin de graphisme pour un site web, 
 					des cartes de visites ou des affiches, nous réalisons des visuels dont vous serez fiers.</p>
 			</div>
 			<div class="stratégie">
@@ -48,12 +49,12 @@
 				<p> Nos graphistes vous proposerons des illustrations 100% originales.</p>
 			</div>
 		</article>
-		<div>
-			<p> "Mon petit graphisme est une excellente agence de graphisme.
+		<div class="bloccommentaire"> <!--mettre un id et choisir la taille du bloc pour réduire à 50% peut être-->
+			<p class="commentaire"> "Mon petit graphisme est une excellente agence de graphisme.
 				Les graphistes sont à l'écoute des besoins 
 				et m'ont permis de renouveler complètement la carte de mon restaurant.""
 			</p>
-			<p> Amandine restauratrice</p>
+			<p class="signature"> Amandine restauratrice</p>
 		</div>	
 	</section>
 <footer> <!-- manque les logos des réseaux sociaux, 
